--- a/src/index.css
+++ b/src/index.css
@@ -8,27 +8,27 @@
 
 /* Typography */
 .text-preset-1 {
-  @apply font-bellefair text-[9rem];
+  @apply font-bellefair text-[9rem] sm:text-[5rem];
 }
 
 .text-preset-2 {
-  @apply font-bellefair text-[6.25rem];
+  @apply font-bellefair text-[6.25rem] md:text-[5rem] sm:text-[3.5rem];
 }
 
 .text-preset-3 {
-  @apply font-bellefair text-[3.5rem];
+  @apply font-bellefair text-[3.5rem] md:text-[2.5rem] sm:text-[1.5rem];
 }
 
 .text-preset-4 {
-  @apply font-bellefair text-[2rem];
+  @apply font-bellefair text-[2rem] md:text-[1.5rem] sm:text-[1.125rem] ;
 }
 
 .text-preset-5 {
-  @apply font-bellefair text-[1.75rem];
+  @apply font-bellefair text-[1.75rem] md:text-[1.25rem];
 }
 
 .text-preset-6 {
-  @apply font-bellefair text-[1.75rem];
+  @apply font-bellefair text-[1.75rem] sm:text-[1rem];
 }
 
 .text-preset-7 {
@@ -36,11 +36,11 @@
 }
 
 .text-preset-8 {
-  @apply font-barlow_condensed text-[1rem] tracking-[2px];
+  @apply font-barlow_condensed text-[1rem] tracking-[2px] sm:text-[0.875rem];
 }
 
 .text-preset-9 {
-  @apply font-barlow text-[1.125rem];
+  @apply font-barlow text-[1.125rem] md:text-[1rem] sm:text-[15px];
 }
 
 .fix-radix-wrapper > div:first-of-type {
