--- a/src/index.css
+++ b/src/index.css
@@ -8,40 +8,45 @@
 
 /* Typography */
 .text-preset-1 {
-  @apply font-bellefair text-[9rem] sm:text-[5rem];
+  @apply font-bellefair lg:text-[9rem] text-[5rem];
 }
 
 .text-preset-2 {
-  @apply font-bellefair text-[6.25rem] md:text-[5rem] sm:text-[3.5rem];
+  @apply font-bellefair lg:text-[6.25rem] md:text-[5rem] text-[3.5rem];
 }
 
 .text-preset-3 {
-  @apply font-bellefair text-[3.5rem] md:text-[2.5rem] sm:text-[1.5rem];
+  @apply font-bellefair lg:text-[3.5rem] md:text-[2.5rem] text-[1.5rem];
 }
 
 .text-preset-4 {
-  @apply font-bellefair text-[2rem] md:text-[1.5rem] sm:text-[1.125rem] ;
+  @apply font-bellefair lg:text-[2rem] md:text-[1.5rem] text-[1.125rem] ;
 }
 
 .text-preset-5 {
-  @apply font-bellefair text-[1.75rem] md:text-[1.25rem];
+  @apply font-bellefair lg:text-[1.75rem] text-[1.25rem];
 }
 
 .text-preset-6 {
-  @apply font-bellefair text-[1.75rem] sm:text-[1rem];
+  @apply font-bellefair lg:text-[1.75rem] text-[1rem];
+}
+
+.text-preset-6-desktop {
+  @apply font-bellefair text-[1.75rem];
 }
 
 .text-preset-7 {
-  @apply font-barlow_condensed text-[0.875rem] tracking-[2px];
+  @apply font-barlow_condensed lg:text-[0.875rem] tracking-[2px];
 }
 
 .text-preset-8 {
-  @apply font-barlow_condensed text-[1rem] tracking-[2px] sm:text-[0.875rem];
+  @apply font-barlow_condensed md:text-[1rem] tracking-[2px] text-[0.875rem];
 }
 
 .text-preset-9 {
-  @apply font-barlow text-[1.125rem] md:text-[1rem] sm:text-[15px];
+  @apply font-barlow lg:text-[1.125rem] md:text-[1rem] text-[15px];
 }
+
 
 .fix-radix-wrapper > div:first-of-type {
   display: contents;
